--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack Exercise</title>
+    <title>Leaderboard App</title>
   </head>
   <body>
-    <h1>Hello webpack!</h1>
+    <header>
+      <h1>Leaderboard</h1>
+    </header>
   </body>
 </html>
