--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,26 @@
     <header>
       <h1>Leaderboard</h1>
     </header>
+    <main>
+      <section class="recent-score">
+        <div>
+          <h2>Recent scores</h2>
+          <button type="submit">Refresh</button>
+        </div>
+        <div>
+          <ul class="scores-list">
+            <li>Achraf: 999</li>
+          </ul>
+        </div>
+      </section>
+      <section class="add-score">
+        <h2>Add your score</h2>
+        <form action="" method="post">
+          <input type="text" class="name" placeholder="Your name" />
+          <input type="text" class="score" placeholder="Your score" />
+          <button type="submit">Submit</button>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
