--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,20 @@
     </header>
     <main>
       <section class="recent-score">
-        <div>
-          <h2>Recent scores</h2>
-          <button type="submit">Refresh</button>
+        <div class="flex-row">
+          <div><h2>Recent scores</h2></div>
+          <div><button type="submit" class="refresh">Refresh</button></div>
         </div>
         <div>
           <ul class="scores-list">
             <li>Achraf: 999</li>
+            <li>KHITER: 888</li>
           </ul>
         </div>
       </section>
       <section class="add-score">
         <h2>Add your score</h2>
-        <form action="" method="post">
+        <form action="">
           <input type="text" class="name" placeholder="Your name" />
           <input type="text" class="score" placeholder="Your score" />
           <button type="submit">Submit</button>
