Fetch  and display data to browser

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,10 @@
       <section class="recent-score">
         <div class="flex-row">
           <div><h2>Recent scores</h2></div>
-          <div><button type="submit" class="refresh">Refresh</button></div>
+          <div><button class="refresh">Refresh</button></div>
         </div>
         <div>
           <ul class="scores-list">
-            <li>Achraf: 999</li>
-            <li>KHITER: 888</li>
           </ul>
         </div>
       </section>
@@ -27,7 +25,7 @@
         <form action="">
           <input type="text" class="name" placeholder="Your name" />
           <input type="text" class="score" placeholder="Your score" />
-          <button type="submit">Submit</button>
+          <button type="submit" class="submit">Submit</button>
         </form>
       </section>
     </main>
